--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <p>We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
           <div class="Ratings">
-            ⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews
-            ⭐⭐⭐⭐⭐ Rated 5 Stars in Report Guru
-            ⭐⭐⭐⭐⭐ Rated 5 Stars in BestTech
+            <div id="Reviews">⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews</div>
+            <div id="Guru">⭐⭐⭐⭐⭐ Rated 5 Stars in Report Guru</div>
+            <div id="BestTech">⭐⭐⭐⭐⭐ Rated 5 Stars in BestTech</div>
           </div>  
         </div>  
           
