add a closing div in line 29

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
           <p>We only provide great products combined with excellent customer service.
           See what our satisfied customers are saying about our services.</p>
+        </div>
           <div class="Ratings">
             <div id="Reviews">⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews</div>
             <div id="Guru">⭐⭐⭐⭐⭐ Rated 5 Stars in Report Guru</div>
@@ -33,7 +34,7 @@
           </div>  
         </div>  
           
-        <div class="Cards">
+        <section class="Cards">
           <div class="Colton Smith card">  
             <img src="./images/image-colton.jpg" alt="Colton Smith image" />
             <h4 id="name">Colton Smith</h4> 
@@ -56,7 +57,7 @@
             <p>"Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"</p>
           </div>  
-        </div>  
+        </section>  
       </div>    
     </main>
   </body>
