adding some divs to make the cards easy in edits

--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
         </div>  
           
         <section class="Cards">
-          <div class="Colton Smith card">  
-            <img src="./images/image-colton.jpg" alt="Colton Smith image" />
-            <h4 id="name">Colton Smith</h4> 
-            <h4>Verified Buyer</h4>
-            <p>"We needed the same printed design as the one we had ordered a week prior.
-            Not only did they find the original order, but we also received it in time.
-            Excellent!"</p>
+          <div class="Colton Smith card">
+            <div class="user">
+              <img src="./images/image-colton.jpg" alt="Colton Smith image" />
+              <h4 id="name">Colton Smith<br> 
+              <span>Verified Buyer</span></h4>
+            </div>
+            <div class="text">  
+              <p>"We needed the same printed design as the one we had ordered a week prior.
+              Not only did they find the original order, but we also received it in time.
+              Excellent!"</p>
+            </div>    
           </div>  
           <div class="Irene card">  
             <img src="./images/image-irene.jpg" alt="irene image"/> 
