completing the divs to the other cards

--- a/index.html
+++ b/index.html
@@ -47,19 +47,27 @@
               Excellent!"</p>
             </div>    
           </div>  
-          <div class="Irene card">  
-            <img src="./images/image-irene.jpg" alt="irene image"/> 
-            <h4 id="name">Irene Roberts</h4> 
-            <h4>Verified Buyer</h4>
-            <p>"Customer service is always excellent and very quick turn around. Completely
-            delighted with the simplicity of the purchase and the speed of delivery."</p>
+          <div class="Irene card">
+            <div class="user">  
+              <img src="./images/image-irene.jpg" alt="irene image"/> 
+              <h4 id="name">Irene Roberts<br/> 
+              <span>Verified Buyer</span></h4>
+            </div>
+            <div class="text">
+              <p>"Customer service is always excellent and very quick turn around. Completely
+              delighted with the simplicity of the purchase and the speed of delivery."</p>
+            </div>  
           </div>  
           <div class="Anne card">  
-            <img src="./images/image-anne.jpg" alt="anne image"/>
-            <h4 id="name">Anne Wallace</h4> 
-            <h4>Verified Buyer</h4>
-            <p>"Put an order with this company and can only praise them for the very high
-            standard. Will definitely use them again and recommend them to everyone!"</p>
+            <div class="user">
+              <img src="./images/image-anne.jpg" alt="anne image"/>
+              <h4 id="name">Anne Wallace</h4> 
+              <h4>Verified Buyer</h4>
+            </div>
+            <div class="text">  
+              <p>"Put an order with this company and can only praise them for the very high
+              standard. Will definitely use them again and recommend them to everyone!"</p>
+            </div>  
           </div>  
         </section>  
       </div>    
