--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <main>
       <div class="container">
-        <div>
+        <div class="title">
           <h1>10,000+ of our users love our products.</h1>
 
           <p>We only provide great products combined with excellent customer service.
