add color to the h1 title and font-weight

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <div class="Anne card">  
             <div class="user">
               <img src="./images/image-anne.jpg" alt="anne image"/>
-              <h4 id="name">Anne Wallace</h4> 
-              <h4>Verified Buyer</h4>
+              <h4 id="name">Anne Wallace<br> 
+              <span>Verified Buyer</span></h4>
             </div>
             <div class="text">  
               <p>"Put an order with this company and can only praise them for the very high
