--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           See what our satisfied customers are saying about our services.</p>
         </div>
           <div class="Ratings">
-            <div id="Reviews">⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews</div>
-            <div id="Guru">⭐⭐⭐⭐⭐ Rated 5 Stars in Report Guru</div>
-            <div id="BestTech">⭐⭐⭐⭐⭐ Rated 5 Stars in BestTech</div>
+            <div id="Reviews rate ">⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews</div>
+            <div id="Guru rate">⭐⭐⭐⭐⭐ Rated 5 Stars in Report Guru</div>
+            <div id="BestTech rate">⭐⭐⭐⭐⭐ Rated 5 Stars in BestTech</div>
           </div>  
         </div>  
           
