--- a/index.html
+++ b/index.html
@@ -28,14 +28,41 @@
           See what our satisfied customers are saying about our services.</p>
         </div>
           <div class="Ratings">
-            <div id="Reviews rate ">⭐⭐⭐⭐⭐ Rated 5 Stars in Reviews</div>
-            <div id="Guru rate">⭐⭐⭐⭐⭐ Rated 5 Stars in Report Guru</div>
-            <div id="BestTech rate">⭐⭐⭐⭐⭐ Rated 5 Stars in BestTech</div>
+            <div class="Reviews" id="rate">
+              <div class="stars">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+              </div>  
+               Rated 5 Stars in Reviews
+            </div>
+            <div class="Guru" id="rate">
+              <div class="stars">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+              </div>
+               Rated 5 Stars in Report Guru
+              </div>
+            <div class="BestTech" id="rate">
+              <div class="stars">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+                <img src="./images/icon-star.svg" alt="star icon">
+              </div>
+               Rated 5 Stars in BestTech
+              </div>
           </div>  
         </div>  
-          
-        <section class="Cards">
-          <div class="Colton Smith card">
+           
+        <div class="Cards">
+          <div id="Colton Smith" class="card">
             <div class="user">
               <img src="./images/image-colton.jpg" alt="Colton Smith image" />
               <h4 id="name">Colton Smith<br> 
@@ -47,7 +74,7 @@
               Excellent!"</p>
             </div>    
           </div>  
-          <div class="Irene card">
+          <div id="Irene" class="card"">
             <div class="user">  
               <img src="./images/image-irene.jpg" alt="irene image"/> 
               <h4 id="name">Irene Roberts<br/> 
@@ -58,7 +85,7 @@
               delighted with the simplicity of the purchase and the speed of delivery."</p>
             </div>  
           </div>  
-          <div class="Anne card">  
+          <div id="Anne" class="card">  
             <div class="user">
               <img src="./images/image-anne.jpg" alt="anne image"/>
               <h4 id="name">Anne Wallace<br> 
@@ -69,7 +96,7 @@
               standard. Will definitely use them again and recommend them to everyone!"</p>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </main>
   </body>
