update margins for the cards

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <span>Verified Buyer</span></h4>
             </div>
             <div class="text">
-              <p>"Customer service is always excellent and very quick turn around. Completely
+              <p>"Customer service is always excellent <br>and very quick turn around. Completely
               delighted with the simplicity of the purchase and the speed of delivery."</p>
             </div>  
           </div>  
